# album-art

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.toml  docker-compose.yml  pyproject.toml
docs/: display-modes-plan.md
scripts/: album-art.service  install-kiosk.sh  mac-kiosk.sh  pi-kiosk-only.sh  setup-pi.sh  spotify-auth.py
src/album_art/: __main__.py  config.py  main.py
src/album_art/services/: poller.py  state.py
src/album_art/sources/: base.py  itunes.py  sonos.py  spotify.py
src/album_art/static/: app.js  index.html  style.css
tests/: conftest.py  test_itunes_connectivity.py  test_poller_resilience.py  test_sonos_connectivity.py  test_state_and_sse.py
